use textTrack api instead

--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,7 @@
 <head>
 </head>
 <body>
-    <button id="start">开启</button>
-    <button id="stop">关闭</button>
+    <button id="go">manually execute the script</button>
     <script src="control.js"></script>
 </body>
 </html>
