修复有时不起作用的bug

--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <button id="go">manually execute the script</button>
+    <button id="test">test</button>
     <script src="control.js"></script>
 </body>
 </html>
