--- a/popup.html
+++ b/popup.html
@@ -9,12 +9,10 @@
 <body>
     <div id="app">
         <h1> {{ message }}</h1>
-        <ul>
-            <li v-for="t in tracks" v-on:click="toggle(t)">{{ t.label }} - {{ t.mode }}</li>
-        </ul>
+        <tlang v-for="track in tracks" v-bind:track="track" v-on:toggle-p="toggle(track)"></tlang>
     </div>
+    <!-- load scripts -->
     <script src="vue.js"></script>
-    <!-- <script src="control.js"></script> -->
     <script src="popup.js"></script>
 </body>
 
